--- a/modules/openapi-generator/src/main/resources/elixir/model.mustache
+++ b/modules/openapi-generator/src/main/resources/elixir/model.mustache
@@ -4,34 +4,15 @@
   {{&description}}
   """
 
-  @derive [Poison.Encoder]
+  @derive Jason.Encoder
   defstruct [
-    {{#vars}}{{#atom}}{{&baseName}}{{/atom}}{{^-last}},
+    {{#vars}}{{#atom}}{{name}}{{/atom}}{{^-last}},
     {{/-last}}{{/vars}}
   ]
 
   @type t :: %__MODULE__{
-    {{#vars}}{{#atom}}{{&baseName}}{{/atom}} => {{{datatype}}}{{#isNullable}} | nil{{/isNullable}}{{^isNullable}}{{^required}} | nil{{/required}}{{/isNullable}}{{^-last}},
+    {{#vars}}{{#atom}}{{name}}{{/atom}} => {{{datatype}}}{{#isNullable}} | nil{{/isNullable}}{{^isNullable}}{{^required}} | nil{{/required}}{{/isNullable}}{{^-last}},
     {{/-last}}{{/vars}}
   }
-end
-
-defimpl Poison.Decoder, for: {{&moduleName}}.Model.{{&classname}} do
-{{#hasComplexVars}}
-  import {{&moduleName}}.Deserializer
-  def decode(value, options) do
-    value
-    {{#vars}}
-    {{^isPrimitiveType}}
-    {{#baseType}}|> deserialize({{#atom}}{{&baseName}}{{/atom}}, {{#isArray}}:list, {{&moduleName}}.Model.{{{items.baseType}}}{{/isArray}}{{#isMap}}:map, {{&moduleName}}.Model.{{{items.baseType}}}{{/isMap}}{{#isDate}}:date, nil{{/isDate}}{{#isDateTime}}:date, nil{{/isDateTime}}{{^isDate}}{{^isDateTime}}{{^isMap}}{{^isArray}}:struct, {{moduleName}}.Model.{{baseType}}{{/isArray}}{{/isMap}}{{/isDateTime}}{{/isDate}}, options)
-    {{/baseType}}
-    {{/isPrimitiveType}}
-    {{/vars}}
-{{/hasComplexVars}}
-{{^hasComplexVars}}
-  def decode(value, _options) do
-    value
-{{/hasComplexVars}}
-  end
 end
 {{/model}}{{/models}}
