Remove some Poison

--- a/modules/openapi-generator/src/main/resources/elixir/request_builder.ex.mustache
+++ b/modules/openapi-generator/src/main/resources/elixir/request_builder.ex.mustache
@@ -94,7 +94,7 @@ defmodule {{moduleName}}.RequestBuilder do
       Tesla.Multipart.add_field(
         multipart,
         key,
-        Poison.encode!(value),
+        Jason.encode(value),
         headers: [{:"Content-Type", "application/json"}]
       )
     end)
