Add notes to requests for better readability

--- a/modules/openapi-generator/src/main/resources/jetbrains-http-client/api.mustache
+++ b/modules/openapi-generator/src/main/resources/jetbrains-http-client/api.mustache
@@ -3,6 +3,7 @@
 {{#operation}}
 
 ### {{#summary}}{{summary}}{{/summary}}
+## {{#notes}}{{notes}}{{/notes}}
 # @name {{operationId}}
 {{httpMethod}} {{basePath}}{{#lambda.doubleMustache}}{{path}}{{/lambda.doubleMustache}}
 {{#consumes}}Content-Type: {{{mediaType}}}
