--- a/modules/openapi-generator/src/main/resources/csharp-netcore/HttpSigningConfiguration.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/HttpSigningConfiguration.mustache
@@ -41,6 +41,11 @@ namespace {{packageName}}.Client
         public string KeyFilePath { get; set; }
 
         /// <summary>
+        /// Specify the API key in the form of a string, either configure the KeyString property or configure the KeyFilePath property.
+        /// </summary>
+        public string KeyString { get; set; } 
+
+        /// <summary>
         /// Gets the key pass phrase for password protected key
         /// </summary>
         public SecureString KeyPassPhrase { get; set; }
@@ -107,6 +112,17 @@ namespace {{packageName}}.Client
             //Hash table to store singed headers
             var HttpSignedRequestHeader = new Dictionary<string, string>();
             var HttpSignatureHeader = new Dictionary<string, string>();
+
+            //Read the api key from the file
+            if(!string.IsNullOrEmpty(this.KeyFilePath))
+            {
+                this.KeyString = ReadApiKeyFromFile(KeyFilePath);
+            }
+
+            if(string.IsNullOrEmpty(KeyString))
+            {
+                throw new Exception("No API key has been provided.");
+            }
 
             if (HttpSigningHeader.Count == 0)
             {
@@ -242,7 +258,7 @@ namespace {{packageName}}.Client
             var headerValuesString = string.Join("\n", headerValuesList);
             var signatureStringHash = GetStringHash(HashAlgorithm.ToString(), headerValuesString);
             string headerSignatureStr = null;
-            var keyType = GetKeyType(KeyFilePath);
+            var keyType = GetKeyType(KeyString);
 
             if (keyType == PrivateKeyType.RSA)
             {
@@ -293,7 +309,7 @@ namespace {{packageName}}.Client
 
         private string GetRSASignature(byte[] stringToSign)
         {
-            RSA rsa = GetRSAProviderFromPemFile(KeyFilePath, KeyPassPhrase);
+            RSA rsa = GetRSAProviderFromPemFile(KeyString, KeyPassPhrase);
             if (SigningAlgorithm == "RSASSA-PSS")
             {
                 var signedbytes = rsa.SignHash(stringToSign, HashAlgorithm, RSASignaturePadding.Pss);
@@ -317,14 +333,9 @@ namespace {{packageName}}.Client
         /// <returns>ECDSA signature</returns>
         private string GetECDSASignature(byte[] dataToSign)
         {
-            if (!File.Exists(KeyFilePath))
-            {
-                throw new Exception("key file path does not exist.");
-            }
-
             const string ecKeyHeader = "-----BEGIN EC PRIVATE KEY-----";
             const string ecKeyFooter = "-----END EC PRIVATE KEY-----";
-            var keyStr = File.ReadAllText(KeyFilePath);
+            var keyStr = KeyString;
             var ecKeyBase64String = keyStr.Replace(ecKeyHeader, "").Replace(ecKeyFooter, "").Trim();
             var keyBytes = System.Convert.FromBase64String(ecKeyBase64String);
             var ecdsa = ECDsa.Create();
@@ -415,18 +426,13 @@ namespace {{packageName}}.Client
             return derBytes.ToArray();
         }
 
-        private  RSACryptoServiceProvider GetRSAProviderFromPemFile(string pemfile, SecureString keyPassPhrase = null)
+        private  RSACryptoServiceProvider GetRSAProviderFromPemFile(string keyString, SecureString keyPassPhrase = null)
         {
             const string pempubheader = "-----BEGIN PUBLIC KEY-----";
             const string pempubfooter = "-----END PUBLIC KEY-----";
             bool isPrivateKeyFile = true;
             byte[] pemkey = null;
-
-            if (!File.Exists(pemfile))
-            {
-                throw new Exception("private key file does not exist.");
-            }
-            string pemstr = File.ReadAllText(pemfile).Trim();
+            string pemstr = keyString;
 
             if (pemstr.StartsWith(pempubheader) && pemstr.EndsWith(pempubfooter))
             {
@@ -713,13 +719,13 @@ namespace {{packageName}}.Client
         /// <summary>
         /// Detect the key type from the pem file.
         /// </summary>
-        /// <param name="keyFilePath">key file path in pem format</param>
+        /// <param name="keyString">api key in string format</param>
         /// <returns>Private Key Type</returns>
-        private PrivateKeyType GetKeyType(string keyFilePath)
+        private PrivateKeyType GetKeyType(string keyString)
         {
-            if (!File.Exists(keyFilePath))
+            if (string.IsNullOrEmpty(keyString))
             {
-                throw new Exception("Key file path does not exist.");
+                throw new Exception("No API key has been provided.");
             }
 
             const string ecPrivateKeyHeader = "BEGIN EC PRIVATE KEY";
@@ -729,7 +735,7 @@ namespace {{packageName}}.Client
             //var pkcs8Header = "BEGIN PRIVATE KEY";
             //var pkcs8Footer = "END PRIVATE KEY";
             PrivateKeyType keyType;
-            var key = File.ReadAllLines(keyFilePath);
+            var key = KeyString.TrimEnd().Split("\n");
 
             if (key[0].Contains(rsaPrivateKeyHeader) &&
                 key[key.Length - 1].ToString().Contains(rsaPrivateFooter))
@@ -747,6 +753,30 @@ namespace {{packageName}}.Client
             }
             return keyType;
         }
+
+        /// <summary>
+        /// Read the api key form the api key file path and stored it in KeyString property.
+        /// </summary>
+        /// <param name="apiKeyFilePath">api key file path</param>
+        private string ReadApiKeyFromFile(string apiKeyFilePath)
+        {
+            string apiKeyString = null;
+            if(!string.IsNullOrEmpty(apiKeyFilePath) && !string.IsNullOrEmpty(this.KeyString))
+            {
+                throw new Exception("Configure either the KeyFilePath or configure the KeyString property.");
+            }
+
+            if(File.Exists(apiKeyFilePath))
+            {
+                apiKeyString = File.ReadAllText(apiKeyFilePath);
+            }
+            else
+            {
+                throw new Exception("Provided API key file path does not exists.");
+            }
+            return apiKeyString;
+        }
+
         #endregion
     }
 }
