--- a/modules/openapi-generator/src/main/resources/kotlin-perfana-gatling/api.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-perfana-gatling/api.mustache
@@ -6,13 +6,13 @@ import io.gatling.javaapi.http.HttpDsl.*
 
 object {{classname}}  {
 
-
 {{#operations}}
 {{#operation}}
-    private val {{{operationId}}}RequestName = "{{{operationId}}}"
+    private const val {{{operationId}}}RequestName = "{{{operationId}}}"
 
     {{#description}}/* {{{description}}} */{{/description}}
-    val {{operationId}}Scn = scenario("{{operationId}}Simulation")
+    val {{operationId}}Scn =
+    TO_REPLACE_FOLLOWING_DOT
     {{#vendorExtensions.x-gatling-query-feeder}}
         .feed(CsvFeeders.{{vendorExtensions.x-gatling-query-feeder}})
     {{/vendorExtensions.x-gatling-query-feeder}}
@@ -28,23 +28,23 @@ object {{classname}}  {
     {{#vendorExtensions.x-gatling-path-feeder}}
         .feed(CsvFeeders.{{vendorExtensions.x-gatling-path-feeder}})
     {{/vendorExtensions.x-gatling-path-feeder}}
-        .exec(http({{{operationId}}}RequestName)
-        .httpRequest("{{httpMethod}}","{{{vendorExtensions.x-gatling-path}}}")
-        {{#vendorExtensions.x-gatling-query-params}}
-        .queryParam("{{gatlingParamName}}","{{gatlingParamValue}}")
-        {{/vendorExtensions.x-gatling-query-params}}
-        .header("perfana-request-name", {{{operationId}}}RequestName.replace(" ", "_"))
-        {{#vendorExtensions.x-gatling-header-params}}
-        .header("{{gatlingParamName}}","{{gatlingParamValue}}")
-        {{/vendorExtensions.x-gatling-header-params}}
-        {{#vendorExtensions.x-gatling-form-params}}
-        .formParam("{{gatlingParamName}}","{{gatlingParamValue}}")
-        {{/vendorExtensions.x-gatling-form-params}}
-        {{#vendorExtensions.x-gatling-body-object}}
-        .body(ElFileBody("bodies/{{operationId}}Body.json")).asJson()
-        {{/vendorExtensions.x-gatling-body-object}}
+        .exec(
+            http({{{operationId}}}RequestName)
+                .httpRequest("{{httpMethod}}","{{{vendorExtensions.x-gatling-path}}}")
+                {{#vendorExtensions.x-gatling-query-params}}
+                .queryParam("{{gatlingParamName}}","{{gatlingParamValue}}")
+                {{/vendorExtensions.x-gatling-query-params}}
+                .header("perfana-request-name", {{{operationId}}}RequestName.replace(" ", "_"))
+                {{#vendorExtensions.x-gatling-header-params}}
+                .header("{{gatlingParamName}}","{{gatlingParamValue}}")
+                {{/vendorExtensions.x-gatling-header-params}}
+                {{#vendorExtensions.x-gatling-form-params}}
+                .formParam("{{gatlingParamName}}","{{gatlingParamValue}}")
+                {{/vendorExtensions.x-gatling-form-params}}
+                {{#vendorExtensions.x-gatling-body-object}}
+                .body(ElFileBody("bodies/{{operationId}}Body.json")).asJson()
+                {{/vendorExtensions.x-gatling-body-object}}
         )
-
 
 {{/operation}}
 {{/operations}}
