--- a/modules/openapi-generator/src/main/resources/kotlin-perfana-gatling/idePathHelper.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-perfana-gatling/idePathHelper.mustache
@@ -11,7 +11,7 @@ import java.nio.file.Paths
 */
 object IDEPathHelper {
 
-    val gatlingConfUrl: URI = javaClass.classLoader.getResource("gatling.conf").toURI()
+    val gatlingConfUrl: URI = javaClass.classLoader.getResource("gatling.conf")!!.toURI()
     val projectRootDir: Path = Paths.get(gatlingConfUrl).parent.parent.parent
 
     val mavenTargetDirectory = projectRootDir.resolve("target")
