--- a/modules/openapi-generator/src/main/resources/kotlin-ktor-client/gradle/gradle.properties.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-ktor-client/gradle/gradle.properties.mustache
@@ -2,7 +2,7 @@
 kotlin.code.style=official
 
 # versions
-kotlin_version = 1.6.21
-ktor_version = 2.0.2
-coroutines_version = 1.6.1-native-mt-2
-serialization_version=1.3.2
+kotlin_version = 1.8.21
+ktor_version = 2.3.1
+coroutines_version = 1.7.1
+serialization_version=1.5.1
