fix the sample code compilation error for split function.

--- a/modules/openapi-generator/src/main/resources/csharp-netcore/HttpSigningConfiguration.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/HttpSigningConfiguration.mustache
@@ -737,7 +737,7 @@ namespace {{packageName}}.Client
             //var pkcs8Header = "BEGIN PRIVATE KEY";
             //var pkcs8Footer = "END PRIVATE KEY";
             PrivateKeyType keyType;
-            key = KeyString.TrimEnd().Split("\n");
+            key = KeyString.TrimEnd().Split('\n');
 
             if (key[0].Contains(rsaPrivateKeyHeader) &&
                 key[key.Length - 1].ToString().Contains(rsaPrivateFooter))
