Removed the either or check for filePath or KeyString.

--- a/modules/openapi-generator/src/main/resources/csharp-netcore/HttpSigningConfiguration.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/HttpSigningConfiguration.mustache
@@ -110,7 +110,7 @@ namespace {{packageName}}.Client
             const string HEADER_AUTHORIZATION = "Authorization";
 
             //Read the api key from the file
-            if(!string.IsNullOrEmpty(this.KeyFilePath))
+            if(string.IsNullOrEmpty(this.KeyString))
             {
                 this.KeyString = ReadApiKeyFromFile(KeyFilePath);
             }
@@ -763,11 +763,7 @@ namespace {{packageName}}.Client
         private string ReadApiKeyFromFile(string apiKeyFilePath)
         {
             string apiKeyString = null;
-            if(!string.IsNullOrEmpty(apiKeyFilePath) && !string.IsNullOrEmpty(this.KeyString))
-            {
-                throw new Exception("Configure either the KeyFilePath or configure the KeyString property.");
-            }
-
+            
             if(File.Exists(apiKeyFilePath))
             {
                 apiKeyString = File.ReadAllText(apiKeyFilePath);
