--- a/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/api.mustache
+++ b/modules/openapi-generator/src/main/resources/csharp-netcore/libraries/generichost/api.mustache
@@ -132,7 +132,7 @@ namespace {{packageName}}.{{apiPackage}}
 
         {{/-first}}
         {{/allParams}}
-        {{#nullableParams}}
+        {{#notNullableParams}}
         {{#-first}}
         /// <summary>
         /// Validates the request parameters
@@ -141,9 +141,9 @@ namespace {{packageName}}.{{apiPackage}}
         /// <param name="{{paramName}}"></param>
         {{#-last}}
         /// <returns></returns>
-        private void Validate{{operationId}}({{#nullableParams}}{{#lambda.required}}{{{dataType}}}{{/lambda.required}} {{paramName}}{{^-last}}, {{/-last}}{{/nullableParams}})
+        private void Validate{{operationId}}({{#notNullableParams}}{{#lambda.required}}{{{dataType}}}{{/lambda.required}} {{paramName}}{{^-last}}, {{/-last}}{{/notNullableParams}})
         {
-            {{#nullableParams}}
+            {{#notNullableParams}}
             {{#-first}}
             #pragma warning disable CS0472 // The result of the expression is always the same since a value of this type is never equal to 'null'
             #pragma warning disable CS8073 // The result of the expression is always the same since a value of this type is never equal to 'null'
@@ -169,11 +169,11 @@ namespace {{packageName}}.{{apiPackage}}
             #pragma warning restore CS0472 // The result of the expression is always the same since a value of this type is never equal to 'null'
             #pragma warning restore CS8073 // The result of the expression is always the same since a value of this type is never equal to 'null'
             {{/-last}}
-            {{/nullableParams}}
+            {{/notNullableParams}}
         }
 
         {{/-last}}
-        {{/nullableParams}}
+        {{/notNullableParams}}
         /// <summary>
         /// Processes the server response
         /// </summary>
@@ -258,12 +258,12 @@ namespace {{packageName}}.{{apiPackage}}
 
             try
             {
-                {{#nullableParams}}
+                {{#notNullableParams}}
                 {{#-first}}
-                Validate{{operationId}}({{#nullableParams}}{{paramName}}{{^-last}}, {{/-last}}{{/nullableParams}});
+                Validate{{operationId}}({{#notNullableParams}}{{paramName}}{{^-last}}, {{/-last}}{{/notNullableParams}});
 
                 {{/-first}}
-                {{/nullableParams}}
+                {{/notNullableParams}}
                 {{#allParams}}
                 {{#-first}}
                 Format{{operationId}}({{#allParams}}{{#isPrimitiveType}}ref {{/isPrimitiveType}}{{paramName}}{{^-last}}, {{/-last}}{{/allParams}});
