--- a/modules/openapi-generator/src/main/resources/python/model_generic.mustache
+++ b/modules/openapi-generator/src/main/resources/python/model_generic.mustache
@@ -1,5 +1,6 @@
 from __future__ import annotations
 import pprint
+import typing
 import re  # noqa: F401
 import json
 {{#hasChildren}}
@@ -20,7 +21,11 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
     {{{description}}}{{^description}}{{{classname}}}{{/description}}
     """
 {{#vars}}
-    {{name}}: {{{vendorExtensions.x-py-typing}}}
+    if typing.TYPE_CHECKING:
+        {{name}}: {{{vendorExtensions.x-mypy-typing}}}
+    else:
+        {{name}}: {{{vendorExtensions.x-py-typing}}}
+
 {{/vars}}
 {{#isAdditionalPropertiesTrue}}
     additional_properties: Dict[str, Any] = {}
