--- a/modules/openapi-generator/src/main/resources/typescript-axios/common.mustache
+++ b/modules/openapi-generator/src/main/resources/typescript-axios/common.mustache
@@ -135,8 +135,9 @@ export const toPathString = function (url: URL) {
  * @export
  */
 export const createRequestFunction = function (axiosArgs: RequestArgs, globalAxios: AxiosInstance, BASE_PATH: string, configuration?: Configuration) {
-    return <T = unknown, R = AxiosResponse<T>>(axios: AxiosInstance = globalAxios, basePath: string = BASE_PATH) => {
-        const axiosRequestArgs = {...axiosArgs.options, url: (configuration?.basePath || basePath) + axiosArgs.url};
+    return <T = unknown, R = AxiosResponse<T>>({{^functionalApisOnly}}axios: AxiosInstance = globalAxios, basePath: string = BASE_PATH{{/functionalApisOnly}}) => {
+        const axiosRequestArgs = {...axiosArgs.options, url: (configuration?.basePath || {{#functionalApisOnly}}BASE_PATH{{/functionalApisOnly}}{{^functionalApisOnly}}basePath{{/functionalApisOnly}}) + axiosArgs.url};
+        {{#functionalApisOnly}}const axios = configuration?.axios || globalAxios;{{/functionalApisOnly}}
         return axios.request<T, R>(axiosRequestArgs);
     };
 }
