Updated import of modules in api docs

--- a/modules/openapi-generator/src/main/resources/typescript/api_doc.mustache
+++ b/modules/openapi-generator/src/main/resources/typescript/api_doc.mustache
@@ -22,7 +22,7 @@ Method | HTTP request | Description
 
 
 ```typescript
-import { {{{moduleName}}} } from '{{{projectName}}}';
+import * as {{{moduleName}}} from '{{{projectName}}}';
 import * as fs from 'fs';
 
 const configuration = {{{moduleName}}}.createConfiguration();
