Edited debug profile in pom.xml

--- a/modules/openapi-generator/src/main/resources/kotlin-perfana-gatling/pom.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-perfana-gatling/pom.mustache
@@ -159,8 +159,9 @@
             <properties>
                 <debug>true</debug>
                 <scenario>debug</scenario>
+                <testRunId>${systemUnderTest}-${workload}-${testEnvironment}-${maven.build.timestamp}</testRunId>
                 <graphitePrefix>gatling2.debug</graphitePrefix>
-                <assertResultsEnabled>${perfanaEnabled}</assertResultsEnabled>
+                <assertResultsEnabled>false</assertResultsEnabled>
                 <initialUsersPerSecond>1</initialUsersPerSecond>
                 <targetUsersPerSecond>1</targetUsersPerSecond>
                 <rampupTimeInSeconds>1</rampupTimeInSeconds>
